# MakinWaves

./: .gitignore  CMakeLists.txt  MessingAroundWithWaves.sln  README.md
MessingAroundWithWaves/: Display.h  ExplicitWorld2d.h  MessingAroundWithWaves.cpp  MessingAroundWithWaves.vcxproj  MessingAroundWithWaves.vcxproj.filters
application/include/: Application.h  ExplicitWorld2d.h  ExplicitWorld2d_Practice.h
application/src/: main.cpp
